--- a/index.css
+++ b/index.css
@@ -80,3 +80,15 @@ select {
     margin-inline:auto;
     max-width: 80rem;
 }
+
+.sr-only{
+    position: absolute;
+width: 1px;
+height: 1px;
+padding: 0;
+margin: -1px;
+overflow: hidden;
+clip: rect(0, 0, 0, 0);
+white-space: nowrap;
+border-width: 0;
+}
